user page improvements

--- a/app/src/main/resources/site/pages/game/game.html
+++ b/app/src/main/resources/site/pages/game/game.html
@@ -87,7 +87,8 @@
             </div>
             <div class="k_gdp-early_access" data-th-unless="${formData.registerStarted}">
                 <h3 class="k_gdp-early_access-title">Регистрация еще не началась.</h3>
-                <h4 class="k_gdp-early_access-subtitle">Вы можете подключить билет и дискорд зараней в <a href="">настройках профиля.</a></h4>
+                <h4 class="k_gdp-early_access-subtitle">Но вы можете подключить билет и дискорд заранее в <a
+                        href="/me?action=settings">настройках профиля</a>.</h4>
                 <div class="k_gdp-actions">
                     <a class="kosticonnect-button inverted k_gdp-back icon-back-arrow" data-th-href="${gamesListPage}">
                         <span>
