--- a/app/src/main/resources/site/pages/user/games/gm/addGameForm.html
+++ b/app/src/main/resources/site/pages/user/games/gm/addGameForm.html
@@ -8,8 +8,8 @@
     </h1>
     <p class="my_games-caption">
         <span data-th-if="${block.processed.time.end}"
-            data-th-text="${block.processed.time.start + ' - ' + block.processed.time.end + ', '}"></span>
-        <span data-th-unless="${block.processed.time.end}" data-th-text="${block.processed.time.start + ', '}"></span>
+            data-th-text="${block.processed.time.start + ' MSK - ' + block.processed.time.end + ' MSK, '}"></span>
+        <span data-th-unless="${block.processed.time.end}" data-th-text="${block.processed.time.start + ' MSK, '}"></span>
         <span data-th-text="${block.content.displayName + (festival.online ? '.' : ', ')}"></span>
         <span data-th-unless="${festival.online}" data-th-text="${location.displayName + '.'}"></span>
         <button class="my_games-link button js-my_games-step3-discard"
