Unified naming of ticket number and code

--- a/app/src/main/resources/site/pages/game/game.html
+++ b/app/src/main/resources/site/pages/game/game.html
@@ -104,7 +104,7 @@
                         <input class="js_get-user-data" name="firstName" placeholder="Ваше имя" required>
                     </div>
                     <div class="form-group" data-th-if="${formData.ticketRequired}">
-                        <input class="js_get-user-data js_festival-ticket-id" name="ticket" placeholder="Номер билета"
+                        <input class="js_get-user-data js_festival-ticket-id" name="ticket" placeholder="Код билета"
                             required>
                     </div>
                     <div class="k_gdp-agreement form-group">
