remove gm role assignment. fixed highlights

--- a/app/src/main/resources/site/pages/kosticonnect/kosticonnect.html
+++ b/app/src/main/resources/site/pages/kosticonnect/kosticonnect.html
@@ -77,13 +77,13 @@
                     <ul class="hightlights-list">
                         <li class="hightlights-item">
                             <div class="hightlights-img_wrap">
-                                <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/hightlights_onering.jpg'})}"
+                                <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/johan.jpg'})}"
                                     alt="hightlight">
-                                <span class="hightlights-label">Free League</span>
+                                <span class="hightlights-label">Johan Nohr</span>
                             </div>
                             <div class="hightlights-desc">
-                                Поболтаем с геймдизайнерами нового издания The One Ring, игры в мире “Властелина Колец”
-                                от издательства Free League.
+                                Поговорим с дизайнером Йоханом Нором о феномене Mork Borg и о новом нашумевшем
+                                киберпанк-хаке на эту популярную игру — о Cy_Borg!
                             </div>
                         </li>
                         <li class="hightlights-item">
@@ -121,13 +121,13 @@
                         </li>
                         <li class="hightlights-item">
                             <div class="hightlights-img_wrap">
-                                <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/hightlights_mothership.jpg'})}"
+                                <img data-th-src="${portal.assetUrl({'_path=images/kosticonnect/mauseritter.jpg'})}"
                                     alt="hightlight">
-                                <span class="hightlights-label">Sean McCoy</span>
+                                <span class="hightlights-label">Isaac Williams</span>
                             </div>
                             <div class="hightlights-desc">
-                                Обсудим успех Mothership, нашумевшей игры в жанре космического хоррора, вместе с ее
-                                дизайнером Шоном МакКоем!
+                                Пообщаемся с Исааком Уильямсом из далекой Австралии о бокс-сете Mausritter‘а и узнаем,
+                                как же такая маленькая игра смогла выстрелить!
                             </div>
                         </li>
                         <li class="hightlights-item">
