--- a/app/src/main/resources/site/pages/games/gamesBlock.html
+++ b/app/src/main/resources/site/pages/games/gamesBlock.html
@@ -49,9 +49,8 @@
                 data-th-text="${portal.localize({'_key=myGames.gameSystem.' + game.processed.system.text, '_locale=ru'})}">
             </h4>
             <h3 class="k_games-game_short_info">
-                <!--
-                    <span data-th-text="${ (game.processed.master ?  (game.processed.master.displayName) + ' | ' : '')}"></span>
-                -->
+                <span
+                    data-th-text="${ (game.processed.master ?  (game.processed.master.displayName) + ' | ' : '')}"></span>
                 <span data-th-unless="${game.processed.block.processed.time.end}"
                     data-th-text="${game.processed.block.processed.time.start + ' MSK'}"></span>
                 <span data-th-if="${game.processed.block.processed.time.end}"
