Add email for all games release, add button games on landing

--- a/app/src/main/resources/site/pages/mails/mails.html
+++ b/app/src/main/resources/site/pages/mails/mails.html
@@ -17,46 +17,40 @@
             <td style="background: #fff; color: #11090F; padding: 32px 0; border-radius: 4px 4px 0px 0px; font-family: Arial; font-size: 16px; ">
                 <table border="0" cellpadding="0" cellspacing="0" align="center" width="506" style="color:#11090F; font-family: Arial; font-size: 16px;">
                     <tr>
-                        <td style="padding: 0 32px;">Пришло время вернуться в <strong>Snake City! </strong>Событие, которое ты не захочешь пропустить: </td>
+                        <td style="padding: 0 32px;">
+                            <strong>СПИСОК ИГР ОТКРЫТ!</strong>
+                        </td>
                     </tr>
                     <tr>
-                        <td style="height: 32px;"></td>
+                        <td style="height: 16px;"></td>
+                    </tr>
+                    <tr>
+                        <td style="padding: 0 32px;">Смотрите,</br> что ждёт вас в <strong>Snake City</strong> на <strong style="white-space: nowrap;">KostiСONnect-2022.</strong> </td>
+                    </tr>
+                    <tr>
+                        <td style="padding: 0 32px;">Сотни игр, от Эноа до DCC, на любой вкус! </td>
+                    </tr>
+                    <tr>
+                        <td style="height: 16px;"></td>
                     </tr>
                     <tr>
                         <td style="padding: 0 32px;">
-                            <strong>KOSTICONNECT 2022!</strong> <strong style="white-space: nowrap;">24-27&nbsp;ФЕВРАЛЯ</strong>
+                            <a href="https://www.kostirpg.com/kosticonnect/igry" target="_blank" rel="noreferrer nofollow"style="display:inline-block; text-decoration: none; background: #F07300; padding: 16px 24px; color: #fff; font-weight: 700;" >Список игр</a>
                         </td>
+                    </tr>
+                    <tr>
+                        <td style="height: 16px;"></td>
                     </tr>
                     <tr>
                         <td style="padding: 16px 0;">
-                            <img data-th-src="${portal.assetUrl({'_path=images/mails/kosticon_teaser.jpg', '_type=absolute'})}" alt="KostiCONnect 2022" width="100%">
+                            <img data-th-src="${portal.assetUrl({'_path=images/mails/kosticonnect_games.jpg', '_type=absolute'})}" alt="KostiCONnect 2022" width="100%">
                         </td>
                     </tr>
                     <tr>
-                        <td style="padding: 0 32px;">Сотни игр всех жанров ждут тебя! </td>
+                        <td style="padding: 0 32px;">До начала фестиваля список будет пополняться! </td>
                     </tr>
                     <tr>
-                        <td style="height: 16px;"></td>
-                    </tr>
-                    <tr>
-                        <td style="padding: 0 32px;">
-                            <strong>НАШИ ГОСТИ</strong>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td style="height: 16px;"></td>
-                    </tr>
-                    <tr>
-                        <td style="padding: 0 32px;">
-                            <ul style="margin: 0px; padding: 0 0 0 21px; color: #11090F;">
-                                <li style="margin: 0px;">Геймдизайнеры The One RIng;</li>
-                                <li style="margin: 0px;">Главный дизайнер Brancalonia Мауро Лонго;</li>
-                                <li style="margin: 0px;">Команда издательства Exalted Funeral;</li>
-                                <li style="margin: 0px;">Создатель Mothership Шон МакКой;</li>
-                                <li style="margin: 0px;">Автор и редактор Thousand Thousand Islands Зедек Сю</li>
-                                <li style="list-style: none; margin: 0px;">и многие другие!</li>
-                            </ul>
-                        </td>
+                        <td style="padding: 0 32px;">Уже скоро — все детали по регистрации на игры!</td>
                     </tr>
                     <tr>
                         <td style="height: 16px;"></td>
