--- a/app/src/main/resources/site/pages/kosticonnect/kosticonnect.html
+++ b/app/src/main/resources/site/pages/kosticonnect/kosticonnect.html
@@ -230,13 +230,13 @@
                     </ul>
                 </div>
             </div>
-            <!-- <div class="fest_program">
+            <div class="fest_program">
                 <div class="site_content">
                     <h2 class="fest_program-title">
-                        <a target="_blank" href="/kosticonnect/games" class="link">ЗАПИШИСЬ</a> НА ИГРУ!
+                        <a target="_blank" href="/kosticonnect/igry" class="link">ЗАПИШИСЬ</a> НА ИГРУ!
                     </h2>
                 </div>
-            </div> -->
+            </div>
             <div class="site_content">
                 <div class="shop_block">
                     <h2 class="shop_block-title kosticonnect-title js_tickets-block">
