--- a/app/src/main/resources/site/pages/game/game.html
+++ b/app/src/main/resources/site/pages/game/game.html
@@ -17,15 +17,16 @@
                     <img data-th-if="${(!game.processed.bigImage or game.processed.bigImage.placeholder) and game.processed.system and !game.processed.system.localizable}"
                         data-th-src="${portal.assetUrl({'_path=images/gameSystems/default.jpg'})}">
                     <span data-th-if="${game.content.data.exclusive}" class="k_games-exclusive_game"><i
-                            class="icon-rock"></i><span 
-                            data-th-text="${portal.localize({'_key=myGames.gameDetails.turboGame', '_locale=ru'})}"></span> </span>
+                            class="icon-rock"></i><span
+                            data-th-text="${portal.localize({'_key=myGames.gameDetails.turboGame', '_locale=' + lang})}"></span>
+                    </span>
                 </div>
             </div>
         </div>
         <div class="k_games-gdp site_content">
             <div class="k_gdp-left_col">
                 <h5 data-th-if="${game.processed.system.localizable}" class="k_gdp-system_name"
-                    data-th-text="${portal.localize({'_key=myGames.gameSystem.' + game.processed.system.text, '_locale=ru'})}">
+                    data-th-text="${portal.localize({'_key=myGames.gameSystem.' + game.processed.system.text, '_locale=' + lang})}">
                 </h5>
                 <h5 data-th-unless="${game.processed.system.localizable}" class="k_gdp-system_name"
                     data-th-text="${game.processed.system.text}">
@@ -35,11 +36,13 @@
             </div>
             <div class="k_gdp-right_col">
                 <div class="k_gdp-info" data-th-if="${game.processed.master}">
-                    <div class="k_gdp-label" data-th-text="${portal.localize({'_key=myGames.gameDetails.gm', '_locale=ru'})}"></div>
+                    <div class="k_gdp-label"
+                        data-th-text="${portal.localize({'_key=myGames.gameDetails.gm', '_locale=' + lang})}"></div>
                     <div class="k_gdp-value" data-th-utext="${game.processed.master.displayName}"></div>
                 </div>
                 <div class="k_gdp-info">
-                    <div class="k_gdp-label" data-th-text="${portal.localize({'_key=myGames.gameDetails.time', '_locale=ru'})}"></div>
+                    <div class="k_gdp-label"
+                        data-th-text="${portal.localize({'_key=myGames.gameDetails.time', '_locale=' + lang})}"></div>
                     <div class="k_gdp-value">
                         <span data-th-text="${game.processed.block.processed.dayName + ', '}"></span>
                         <span data-th-text="${game.processed.block.processed.date}"></span>
@@ -52,46 +55,61 @@
                     </div>
                 </div>
                 <div class="k_gdp-info">
-                    <div class="k_gdp-label" data-th-text="${portal.localize({'_key=myGames.gameDetails.theme', '_locale=ru'})}"></div>
+                    <div class="k_gdp-label"
+                        data-th-text="${portal.localize({'_key=myGames.gameDetails.theme', '_locale=' + lang})}"></div>
                     <div class="k_gdp-value">
                         <span
-                            data-th-utext="${portal.localize({'_key=myGames.theme.' + game.content.data.theme, '_locale=ru'})}"></span>
+                            data-th-utext="${portal.localize({'_key=myGames.theme.' + game.content.data.theme, '_locale=' + lang})}"></span>
                     </div>
                 </div>
                 <div class="k_gdp-info">
-                    <div class="k_gdp-label" data-th-text="${portal.localize({'_key=myGames.gameDetails.language', '_locale=ru'})}"></div>
+                    <div class="k_gdp-label"
+                        data-th-text="${portal.localize({'_key=myGames.gameDetails.language', '_locale=' + lang})}">
+                    </div>
                     <div class="k_gdp-value"
-                        data-th-text="${portal.localize({'_key=myGames.form.adventureLang.' + game.content.data.language, '_locale=ru'})}">
+                        data-th-text="${portal.localize({'_key=myGames.form.adventureLang.' + game.content.data.language, '_locale=' + lang})}">
                     </div>
                 </div>
                 <div class="k_gdp-info" data-th-if="${game.processed.table != ''}">
-                    <div class="k_gdp-label" data-th-text="${portal.localize({'_key=myGames.gameDetails.gameNumber', '_locale=ru'})}"></div>
+                    <div class="k_gdp-label"
+                        data-th-text="${portal.localize({'_key=myGames.gameDetails.gameNumber', '_locale=' + lang})}">
+                    </div>
                     <div class="k_gdp-value" data-th-utext="${game.processed.table}"></div>
                 </div>
                 <div class="k_gdp-info">
-                    <div class="k_gdp-label" data-th-text="${portal.localize({'_key=myGames.gameDetails.seats', '_locale=ru'})}"></div>
+                    <div class="k_gdp-label"
+                        data-th-text="${portal.localize({'_key=myGames.gameDetails.seats', '_locale=' + lang})}"></div>
                     <div class="k_gdp-value"
                         data-th-text="${game.processed.seatsReserved + '/' + game.content.data.maxPlayers}">0\5</div>
                 </div>
                 <div class="k_gdp-info">
-                    <div class="k_gdp-label" data-th-text="${portal.localize({'_key=myGames.gameDetails.charCreation', '_locale=ru'})}"></div>
+                    <div class="k_gdp-label"
+                        data-th-text="${portal.localize({'_key=myGames.gameDetails.charCreation', '_locale=' + lang})}">
+                    </div>
                     <div class="k_gdp-value"
-                        data-th-text="${portal.localize({'_key=myGames.form.pregens.' + game.content.data.pregens, '_locale=ru'})}">
+                        data-th-text="${portal.localize({'_key=myGames.form.pregens.' + game.content.data.pregens, '_locale=' + lang})}">
                     </div>
                 </div>
                 <div class="k_gdp-info" data-th-if="${game.processed.additionalInfo != ''}">
-                    <div class="k_gdp-label" data-th-text="${portal.localize({'_key=myGames.gameDetails.additional', '_locale=ru'})}"></div>
+                    <div class="k_gdp-label"
+                        data-th-text="${portal.localize({'_key=myGames.gameDetails.additional', '_locale=' + lang})}">
+                    </div>
                     <div class="k_gdp-value" data-th-utext="${game.processed.additionalInfo}"></div>
                 </div>
             </div>
             <div class="k_gdp-early_access" data-th-unless="${formData.registerStarted}">
-                <h3 class="k_gdp-early_access-title" data-th-text="${portal.localize({'_key=myGames.earlyAccess.title', '_locale=ru'})}"></h3>
+                <h3 class="k_gdp-early_access-title"
+                    data-th-text="${portal.localize({'_key=myGames.earlyAccess.title', '_locale=' + lang})}"></h3>
                 <h4 class="k_gdp-early_access-subtitle">
-                    <span data-th-text="${portal.localize({'_key=myGames.earlyAccess.subtitle', '_locale=ru'})}"></span>
-                    <a href="/me?action=settings" data-th-text="${portal.localize({'_key=myGames.earlyAccess.subtitleLink', '_locale=ru'})}"></a></h4>
+                    <span
+                        data-th-text="${portal.localize({'_key=myGames.earlyAccess.subtitle', '_locale=' + lang})}"></span>
+                    <a href="/me?action=settings"
+                        data-th-text="${portal.localize({'_key=myGames.earlyAccess.subtitleLink', '_locale=' + lang})}"></a>
+                </h4>
                 <div class="k_gdp-actions">
                     <a class="kosticonnect-button inverted k_gdp-back icon-back-arrow" data-th-href="${gamesListPage}">
-                        <span data-th-text="${portal.localize({'_key=myGames.gameDetails.backToList', '_locale=ru'})}"></span>
+                        <span
+                            data-th-text="${portal.localize({'_key=myGames.gameDetails.backToList', '_locale=' + lang})}"></span>
                     </a>
                 </div>
             </div>
@@ -99,34 +117,45 @@
                 <form class="k_gdp-sign_up-step_1 js_game-sign-up-step-1"
                     data-th-if="${!formData.festivalIsMeetUp and (formData.userNameRequired or formData.ticketRequired)}">
                     <div class="form-group" data-th-if="${formData.userNameRequired}">
-                        <input class="js_get-user-data" name="firstName" data-th-placeholder="${portal.localize({'_key=myGames.gameDetails.name', '_locale=ru'})}" required>
+                        <input class="js_get-user-data" name="firstName"
+                            data-th-placeholder="${portal.localize({'_key=myGames.gameDetails.name', '_locale=' + lang})}"
+                            required>
                     </div>
                     <div class="form-group" data-th-if="${formData.ticketRequired}">
-                        <input class="js_get-user-data js_festival-ticket-id" name="ticket" data-th-placeholder="${portal.localize({'_key=myGames.gameDetails.ticketNum', '_locale=ru'})}"
+                        <input class="js_get-user-data js_festival-ticket-id" name="ticket"
+                            data-th-placeholder="${portal.localize({'_key=myGames.gameDetails.ticketNum', '_locale=' + lang})}"
                             required>
                     </div>
                 </form>
                 <div data-th-if="${formData.requireDiscord && discordUrl}"
                     class="k_gdp-sign_up-step_2 js_game-sign-up-step-2" style="display:none">
                     <a data-th-href="${discordUrl}" class="button social_login-discord" name="discord"
-                        placeholder="discord" data-th-text="${portal.localize({'_key=myGames.gameDetails.discordLogin', '_locale=ru'})}"></a>
+                        placeholder="discord"
+                        data-th-text="${portal.localize({'_key=myGames.gameDetails.discordLogin', '_locale=' + lang})}"></a>
                 </div>
                 <div class="k_gdp-actions js_game-signout-block" data-th-classappend="${gameSigned ? '' : 'hidden'}">
-                    <div class="k_games-time_title" data-th-text="${portal.localize({'_key=myGames.gameDetails.alreadySigned', '_locale=ru'})}"></div>
+                    <div class="k_games-time_title"
+                        data-th-text="${portal.localize({'_key=myGames.gameDetails.alreadySigned', '_locale=' + lang})}">
+                    </div>
                     <button class="kosticonnect-button primary k_gdp-main-cta js_sign-out-of-game"
-                        data-th-text="${portal.localize({'_key=myGames.gameDetails.unsubscribe', '_locale=ru'})}"></button>
+                        data-th-text="${portal.localize({'_key=myGames.gameDetails.unsubscribe', '_locale=' + lang})}"></button>
                     <a class="kosticonnect-button inverted k_gdp-back icon-back-arrow" data-th-href="${gamesListPage}">
-                        <span data-th-text="${portal.localize({'_key=myGames.gameDetails.backToList', '_locale=ru'})}"></span>
+                        <span
+                            data-th-text="${portal.localize({'_key=myGames.gameDetails.backToList', '_locale=' + lang})}"></span>
                     </a>
                 </div>
                 <div class="k_gdp-actions js_game-signin-block" data-th-classappend="${gameSigned ? 'hidden' : ''}">
-                    <button class="kosticonnect-button primary k_gdp-main-cta js_sign-up-for-game" data-th-text="${portal.localize({'_key=myGames.gameDetails.subscribe', '_locale=ru'})}"></button>
+                    <button class="kosticonnect-button primary k_gdp-main-cta js_sign-up-for-game"
+                        data-th-text="${portal.localize({'_key=myGames.gameDetails.subscribe', '_locale=' + lang})}"></button>
                     <a class="kosticonnect-button inverted k_gdp-back icon-back-arrow" data-th-href="${gamesListPage}">
-                        <span data-th-text="${portal.localize({'_key=myGames.gameDetails.backToList', '_locale=ru'})}"></span>
+                        <span
+                            data-th-text="${portal.localize({'_key=myGames.gameDetails.backToList', '_locale=' + lang})}"></span>
                     </a>
                     <div class="k_gdp-agreement form-group" style="margin-top: 8px;">
-                        <label for="fest-agreement" class="label"> <span data-th-text="${portal.localize({'_key=myGames.gameDetails.agreement', '_locale=ru'})}"></span>
-                            <a href="/kosticonnect/pravila-kosticonnect" target="_blank" data-th-text="${portal.localize({'_key=myGames.gameDetails.agreementLink', '_locale=ru'})}"></a></label>
+                        <label for="fest-agreement" class="label"> <span
+                                data-th-text="${portal.localize({'_key=myGames.gameDetails.agreement', '_locale=' + lang})}"></span>
+                            <a href="/kosticonnect/pravila-kosticonnect" target="_blank"
+                                data-th-text="${portal.localize({'_key=myGames.gameDetails.agreementLink', '_locale=' + lang})}"></a></label>
                     </div>
                 </div>
             </div>
