--- a/app/src/main/resources/site/pages/mails/mails.html
+++ b/app/src/main/resources/site/pages/mails/mails.html
@@ -35,7 +35,7 @@
                     </tr>
                     <tr>
                         <td style="padding: 0 32px;">
-                            <a href="https://www.kostirpg.com/kosticonnect/igry" target="_blank" rel="noreferrer nofollow"style="display:inline-block; text-decoration: none; background: #F07300; padding: 16px 24px; color: #fff; font-weight: 700;" >Список игр</a>
+                            <a href="https://www.kostirpg.com/kosticonnect/igry" target="_blank" rel="noreferrer nofollow"style="display:inline-block; text-decoration: none; background: #F07300; padding: 16px 24px; color: #fffffe ; font-weight: 700;" >Список игр</a>
                         </td>
                     </tr>
                     <tr>
@@ -57,7 +57,7 @@
                     </tr>
                     <tr>
                         <td style="padding: 0 32px;">
-                            <a href="https://www.kostirpg.com/kosticonnect" target="_blank" rel="noreferrer nofollow"style="display:inline-block; text-decoration: none; background: #F07300; padding: 16px 24px; color: #fff; font-weight: 700;" >Купить билет</a>
+                            <a href="https://www.kostirpg.com/kosticonnect" target="_blank" rel="noreferrer nofollow"style="display:inline-block; text-decoration: none; background: #F07300; padding: 16px 24px; color: #fffffe ; font-weight: 700;" >Купить билет</a>
                         </td>
                     </tr>
                 </table>
