Turbo registration mail

--- a/app/src/main/resources/site/pages/mails/mails.html
+++ b/app/src/main/resources/site/pages/mails/mails.html
@@ -18,17 +18,26 @@
                 <table border="0" cellpadding="0" cellspacing="0" align="center" width="506" style="color:#11090F; font-family: Arial; font-size: 16px;">
                     <tr>
                         <td style="padding: 0 32px;">
-                            <strong>СПИСОК ИГР ОТКРЫТ!</strong>
+                            <strong>Привет, Турбо-снейкчане!</strong>
                         </td>
                     </tr>
                     <tr>
                         <td style="height: 16px;"></td>
                     </tr>
                     <tr>
-                        <td style="padding: 0 32px;">Смотрите,</br> что ждёт вас в <strong>Snake City</strong> на <strong style="white-space: nowrap;">KostiСONnect-2022.</strong> </td>
+                        <td style="padding: 0 32px;">Вы все "приложили" Турбо Билет, молодцы! </td>
                     </tr>
                     <tr>
-                        <td style="padding: 0 32px;">Сотни игр, от Эноа до DCC, на любой вкус! </td>
+                        <td style="padding: 0 32px;">Для вас открывается предварительная регистрация! </td>
+                    </tr>
+                    <tr>
+                        <td style="height: 16px;"></td>
+                    </tr>
+                    <tr>
+                        <td style="padding: 0 32px;"><strong>Время: среда, 16.02.2022, 14-00 MSK.</strong></td>
+                    </tr>
+                    <tr>
+                        <td style="padding: 0 32px;">Вы сможете зарегистрироваться на <strong>любые 2 игры</strong> раньше всех остальных.  </td>
                     </tr>
                     <tr>
                         <td style="height: 16px;"></td>
@@ -43,22 +52,17 @@
                     </tr>
                     <tr>
                         <td style="padding: 16px 0;">
-                            <img data-th-src="${portal.assetUrl({'_path=images/mails/kosticonnect_games.jpg', '_type=absolute'})}" alt="KostiCONnect 2022" width="100%">
+                            <img data-th-src="${portal.assetUrl({'_path=images/mails/kosticonnect_turbo.jpg', '_type=absolute'})}" alt="KostiCONnect 2022" width="100%">
                         </td>
                     </tr>
                     <tr>
-                        <td style="padding: 0 32px;">До начала фестиваля список будет пополняться! </td>
-                    </tr>
-                    <tr>
-                        <td style="padding: 0 32px;">Уже скоро — все детали по регистрации на игры!</td>
+                        <td style="padding: 0 32px;">Убедитесь, что вы выбрали себе игры! </td>
                     </tr>
                     <tr>
                         <td style="height: 16px;"></td>
                     </tr>
                     <tr>
-                        <td style="padding: 0 32px;">
-                            <a href="https://www.kostirpg.com/kosticonnect" target="_blank" rel="noreferrer nofollow"style="display:inline-block; text-decoration: none; background: #F07300; padding: 16px 24px; color: #fffffe ; font-weight: 700;" >Купить билет</a>
-                        </td>
+                        <td style="padding: 0 32px;"><strong>Запомните: вы сможете без ограничений продолжить регистрацию на другие игры в четверг, когда откроется общая запись!</strong></td>
                     </tr>
                 </table>
             </td>
