--- a/app/src/main/resources/site/pages/mails/mails.html
+++ b/app/src/main/resources/site/pages/mails/mails.html
@@ -14,8 +14,14 @@
             </td>
         </tr> -->
         <tr>
-            <td style="background: #fff; color: #11090F; padding: 32px 0; border-radius: 4px 4px 0px 0px; font-family: Arial; font-size: 16px; ">
+            <td style="background: #fff; color: #11090F; padding: 0 0 34px 0; border-radius: 4px 4px 0px 0px; font-family: Arial; font-size: 16px; ">
                 <table border="0" cellpadding="0" cellspacing="0" align="center" width="506" style="color:#11090F; font-family: Arial; font-size: 16px;">
+                    
+                    <tr>
+                        <td style="padding: 0 0;">
+                            <img data-th-src="${portal.assetUrl({'_path=images/mails/kosticonnect_turbo.jpg', '_type=absolute'})}" alt="KostiCONnect 2022" width="100%">
+                        </td>
+                    </tr>
                     <tr>
                         <td style="padding: 0 32px;">
                             <strong>Привет, Турбо-снейкчане!</strong>
@@ -49,11 +55,6 @@
                     </tr>
                     <tr>
                         <td style="height: 16px;"></td>
-                    </tr>
-                    <tr>
-                        <td style="padding: 16px 0;">
-                            <img data-th-src="${portal.assetUrl({'_path=images/mails/kosticonnect_turbo.jpg', '_type=absolute'})}" alt="KostiCONnect 2022" width="100%">
-                        </td>
                     </tr>
                     <tr>
                         <td style="padding: 0 32px;">Убедитесь, что вы выбрали себе игры! </td>
