Fix wrap for text mail

--- a/app/src/main/resources/site/pages/mails/mails.html
+++ b/app/src/main/resources/site/pages/mails/mails.html
@@ -40,7 +40,7 @@
                         <td style="height: 16px;"></td>
                     </tr>
                     <tr>
-                        <td style="padding: 0 32px;"><strong>Время: среда, 16.02.2022, 14-00 MSK.</strong></td>
+                        <td style="padding: 0 32px;"><strong>Время: среда, <span style="white-space:nowrap">16.02.2022</span>, <span style="white-space:nowrap">14-00 MSK.</span></strong></td>
                     </tr>
                     <tr>
                         <td style="padding: 0 32px;">Вы сможете зарегистрироваться на <strong>любые 2 игры</strong> раньше всех остальных.  </td>
