--- a/app/src/main/resources/site/pages/games/games.html
+++ b/app/src/main/resources/site/pages/games/games.html
@@ -76,6 +76,15 @@
                                 </select>
                             </div>
                         </div>
+                        <div class="k_games-filters-item language">
+                            <label class="k_games-filters-label" for="k_games-day-select">Язык</label>
+                            <div class="k_games-filters-select select-field">
+                                <select name="day" class="select js_festival-filter-select" id="k_games-day-select">
+                                    <option value="">Любой</option>
+                                    <option> Placeholder</option>
+                                </select>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="k_games-day_block">
