added lang filter

--- a/app/src/main/resources/site/pages/games/games.html
+++ b/app/src/main/resources/site/pages/games/games.html
@@ -79,9 +79,12 @@
                         <div class="k_games-filters-item language">
                             <label class="k_games-filters-label" for="k_games-day-select">Язык</label>
                             <div class="k_games-filters-select select-field">
-                                <select name="day" class="select js_festival-filter-select" id="k_games-day-select">
+                                <select name="language" class="select js_festival-filter-select"
+                                    id="k_games-day-select">
                                     <option value="">Любой</option>
-                                    <option> Placeholder</option>
+                                    <option value="ru">Русский</option>
+                                    <option value="ua">Українська</option>
+                                    <option value="en">English</option>
                                 </select>
                             </div>
                         </div>
